# Cubos

./: .gitignore  CMakeLists.txt  test.txt
resource/: cubos.qrc
resource/lang/: Cubos_en_US.ts
src/: CMakeLists.txt
src/app/: app.cpp  app.h
src/core/: CMakeLists.txt  main.cpp
src/filehandler/: filehandler.cpp  filehandler.h  filehandlerExceptions.h
src/mainwindow/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  viewport.cpp  viewport.h
